# plasma-wallpaper-plugin2

./: .gitignore  CMakeLists.txt  INDEX.md  IPC_INTEGRATION.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SIMPLE_IPC_INTEGRATION.md  STRUCTURE.md  TESTING.md  build-deb.sh  build.sh  install-restart-plasma.sh  install.sh  package.sh  uninstall.sh
.github/workflows/: release.yml
debian/: changelog  control  postinst  preinst  rules
org.kabegame.wallpaper/: metadata.json
org.kabegame.wallpaper/contents/config/: main.xml
org.kabegame.wallpaper/contents/ui/: config.qml  main.qml
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: config.qml  main.qml
package/translate/: README.md  build.sh  ja.po  ko.po  template.pot  zh_CN.po
plugin/: CMakeLists.txt  ipcclient.cpp  ipcclient.h  kabegamewallpaperplugin.cpp  qmldir  qmldir.in  thumbnailprovider.cpp  thumbnailprovider.h  wallpaperbackend.cpp  wallpaperbackend.h
